feat: create config file for CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,14 +10,14 @@ jobs:
           name: Update Yarn
           command: "sudo npm install -g yarn --force"
       - restore_cache:
-          key: dependency-cache-{{ checksum "yarn-lock.json" }}
+          key: yarn-packages-{{ checksum "yarn-lock.json" }}
       - run:
           name: Install Dependencies
           command: yarn install
       - save_cache:
-          key: dependency-cache-{{ checksum "yarn-lock.json" }}
+          key: yarn-packages-{{ checksum "yarn-lock.json" }}
           paths:
-            - ./node_modules
+            -  ~/.cache/yarn
       - run:
           name: Build React App
           command: yarn build
