--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "netlify-cli": "^15.6.0",
     "prettier": "^2.8.8"
   }
 }
