--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,12 @@ jobs:
           name: Update Yarn
           command: "sudo npm install -g yarn --force"
       - restore_cache:
-          key: yarn-packages-{{ checksum "yarn-lock.json" }}
+          key: yarn-packages-{{ checksum "yarn-lock" }}
       - run:
           name: Install Dependencies
           command: yarn install
       - save_cache:
-          key: yarn-packages-{{ checksum "yarn-lock.json" }}
+          key: yarn-packages-{{ checksum "yarn-lock" }}
           paths:
             -  ~/.cache/yarn
       - run:
