--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,11 @@ jobs:
           key: yarn-packages-{{ checksum "yarn-lock" }}
       - run:
           name: Install Dependencies
-          command: yarn install
+          command: yarn install --frozen-lockfile --cache-folder ~/.cache/yarn
       - save_cache:
           key: yarn-packages-{{ checksum "yarn-lock" }}
           paths:
-            -  ~/.cache/yarn
+            - ~/.cache/yarn
       - run:
           name: Build React App
           command: yarn build
