--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,5 +63,8 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run:
+          name: Install Netlify CLI
+          command: sudo npm i -g netlify-cli
+      - run:
           name: Deploy to Netlify
           command: ./node_modules/.bin/netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN --prod --dir ~/project/build
