--- a/package.json
+++ b/package.json
@@ -54,5 +54,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "netlify-cli": "^15.6.0",
     "prettier": "^2.8.8"
-  }
+  },
+  "jest": {
+    "coveragePathIgnorePatterns" : [
+      "<rootDir>/src/index.ts"
+    ]
+}
 }
