--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
   },
   "jest": {
     "coveragePathIgnorePatterns" : [
-      "<rootDir>/src/index.ts"
+      "<rootDir>/src/index.ts",
+      "index.ts"
     ]
 }
 }
